# lean-buffer-manager

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build_test.yaml
src/: buffer_frame.cpp  buffer_frame.hpp  buffer_manager.cpp  buffer_manager.hpp  data_regions.cpp  data_regions.hpp  swip.cpp  swip.hpp
test/: basic.cpp  test_utils.cpp  test_utils.hpp
